# u2k

./: README.md  pyproject.toml
butler/: bps.yaml  butler.yaml
config/: coaddMultibandFit.py  consolidateObjectTable.py  detectCoaddSources.py  forcedPhotCoadd.py  measureCoaddSources.py  objectTableTractAnalysis.py  packer.py  priorityList.py  skymap_rings.py
pipelines/: multiband.yaml
python/u2k/: analysis.py  asiaa.py  butler.py  calibrateImage.py  deblend.py  detection.py  detector.py  ingest.py  instrument.py  logging.py  math.py  measure.py  processPool.py  transformObjects.py  veils.py  warp.py
schemas/: Object.yaml
ups/: u2k.table
