[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "U2K"
description = "Reprocessing the U2K dataset (HSC-SSP D/UD + auxiliary data)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy",
    "lsst-utils",
    "matplotlib",
    "numpy",
]
dynamic = ["version"]
[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "lsst-versions",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["python/"]
include = ["u2k", "u2k.*"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 110
known_first_party = ["u2k"]

[tool.lsst_versions]
write_to = "python/u2k/version.py"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"  # Recommended as best practice

[tool.pydocstyle]
convention = "numpy"
